<resources>
    <string name="app_name">MC2020Lab</string>
    <string name="loginTitleTxt">Welcome to Assisted Reminder App 2020!</string>
    <string name="loginNameTxt">Your username</string>
    <string name="loginPasswordTxt">Your password</string>
    <string name="loginBtn">Login</string>
    <string name="newUserBtn">New User?</string>

    <string name="addReminderBtn">Add Reminder</string>
    <string name="checkMapBtn">Check Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="newUserTitle">Add your User information</string>
    <string name="newUserNameTxt">Your username:</string>
    <string name="newUserPasswordTxt">Your password (pin with 4 characters)</string>
    <string name="newUserPassword2Txt">Repeat your password (pin with 4 characters)</string>
    <string name="newUserRegisterBtn">Register new user</string>

    <string name="newReminderBtn">Add Reminder</string>
    <string name="reminderTitleTxt">Description:</string>

    <string name="dateTitleTxt">Date:</string>
    <string name="timeTitleTxt">Time:</string>
    <string name="tvTitleLocation">Location:</string>

    <string name="DeleteTxBtn">Delete</string>
    <string name="EditTxBtn">Edit</string>
    <string name="ChangeTimeTx">Change time</string>
    <string name="timeTx">Time: </string>
    <string name="changeDateTx">Change date: </string>
    <string name="dateTx">Date: </string>
    <string name="descriptionTx">Description: </string>

    <string name="clearDataBtn">Delete all Reminders</string>

</resources>
